BUGFIX: full width column layouts now look good on mobile

--- a/jetstream/static/jetstream/css/blocks/column-standard.less
+++ b/jetstream/static/jetstream/css/blocks/column-standard.less
@@ -114,6 +114,11 @@
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+  .row-wrapper.full-width {
+      .row {
+        width: 100%;
+      }
+  }
 }
 
 // For landscape-mode phones:
